Renamed to oelf

--- a/crates/goblin-pyo3/Cargo.toml
+++ b/crates/goblin-pyo3/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "goblin-pyo3"
-version = "0.1.0"
+version = "0.0.1"
 edition = "2021"
 
 [lib]
-name = "goblin"
+name = "oelf"
 crate-type = ["cdylib"]
 
 [dependencies]
