--- a/crates/goblin-pyo3/pyproject.toml
+++ b/crates/goblin-pyo3/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1,<2"]
 build-backend = "maturin"
 
 [project]
-name = "goblin"
+name = "oelf"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
