--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
-[workspace]
-resolver = "2"
+[package]
+name = "goblin-pyo3"
+version = "0.0.2"
+edition = "2021"
 
-members = [
-  "crates/goblin-pyo3"
-]
+[lib]
+name = "oelf"
+crate-type = ["cdylib"]
+
+[dependencies]
+goblin = "0.7.1"
+pyo3 = { version = "0.20.0", features = ["extension-module"] }
