--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,4 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
-
+dynamic = ["version"]
